--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/csv_data
-spring.datasource.username=hpe_official
-spring.datasource.password=chalana@1999
+spring.datasource.url=jdbc:postgresql://localhost:5432/<db_name>
+spring.datasource.username=<db_username>
+spring.datasource.password=<db_password>
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
