Multiple changes for discount feature

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/travel_booking
+spring.datasource.url=jdbc:postgresql://localhost:5432/travel_booking_2
 spring.datasource.username=postgres
 spring.datasource.password=adithyamahesh
 spring.datasource.driver-class-name=org.postgresql.Driver
